# llm-x-language

./: .gitignore  README.md  db.py  executor.py  llm.py  main.py  task.py  utils.py
dojo/python_container/: .pylintrc  pyproject.toml
dojo/rust_container/: Cargo.toml
dojo/swift_container/: Package.swift
dojo/typescript_container/: package.json  pnpm-lock.yaml  tsconfig.json
exec_php/: __init__.py  exec_call.py  exec_check.py  exec_contains.py  exec_run.py  php_utils.py
exec_python/: exec_call.py  exec_check.py  exec_contains.py  exec_run.py  python_utils.py
exec_rust/: exec_call.py  exec_check.py  exec_contains.py  exec_run.py  rust_utils.py
exec_swift/: exec_call.py  exec_check.py  exec_contains.py  exec_run.py  swift_utils.py
exec_typescript/: __init__.py  exec_call.py  exec_check.py  exec_contains.py  exec_run.py  typescript_utils.py
provider/: inception.py  lmstudio.py  openrouter.py  together_ai.py  types.py
tasks/: .swp  base.md  simple.json  simple.md
tasks/python/: _add.md  _task_call.md  _task_run.md
tasks/rust/: _add.md  _task_call.md  _task_check.md  _task_run.md
tasks/swift/: _add.md  _task_call.md  _task_check.md  _task_run.md
tasks/typescript/: _add.md  _task_call.md  _task_check.md  _task_run.md
