[package]
name = "rust_container"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.7.0"
serde_json = "1.0.135"
regex = "1.11.1"
bitflags = "2.7.0"
itoa = "1.0.14"
itertools = "0.14.0"
